[gd_scene load_steps=37 format=3 uid="uid://51sf76w2bhgt"]

[ext_resource type="Script" uid="uid://2rta1noougk" path="res://Player/Scripts/player_script.gd" id="1_opcjl"]
[ext_resource type="Texture2D" uid="uid://cjbqwd1yi2nwt" path="res://Player/Player2/Textures/player_2_texture.tres" id="3_hmyw0"]
[ext_resource type="Texture2D" uid="uid://ciyfo7g877qr8" path="res://GuiElements/Textures/die.png" id="4_5q43k"]
[ext_resource type="PackedScene" uid="uid://bhysqodvgtrok" path="res://Scenes/light.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://c2aeevkukhjb3" path="res://Scenes/wand.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://bpskafuab3c07" path="res://Scenes/sword.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://1s6u3oo647dn" path="res://Scenes/JumpComponent.tscn" id="14_lgxc1"]
[ext_resource type="PackedScene" uid="uid://3qv8do6eeqsj" path="res://Scenes/floor_rotater_component.tscn" id="15_aumw4"]
[ext_resource type="PackedScene" uid="uid://bupf61wjcvaho" path="res://Scenes/grab_zone_component.tscn" id="16_dhlbv"]
[ext_resource type="PackedScene" uid="uid://bn0vo2ep18048" path="res://Scenes/hitbox_component.tscn" id="16_s05jt"]
[ext_resource type="PackedScene" uid="uid://ba7svta3vvg05" path="res://Scenes/hurtbox_component.tscn" id="17_n3wkg"]
[ext_resource type="PackedScene" uid="uid://8wj04cl43dvv" path="res://Scenes/lava_water_detector.tscn" id="18_e6n55"]
[ext_resource type="PackedScene" uid="uid://cd44bc5ro42ae" path="res://Scenes/health_component.tscn" id="18_thren"]
[ext_resource type="PackedScene" uid="uid://h34illvwh1cv" path="res://Enemys/Scenes/reset_component.tscn" id="23_w7l8q"]
[ext_resource type="PackedScene" uid="uid://c5dtvmxqaq5ik" path="res://Scenes/invisible_frames_comp.tscn" id="24_6rijt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f2bs6"]
atlas = ExtResource("3_hmyw0")
region = Rect2(84, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0v7v"]
atlas = ExtResource("3_hmyw0")
region = Rect2(84, 24, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_13d3c"]
atlas = ExtResource("4_5q43k")
region = Rect2(0, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp0p3"]
atlas = ExtResource("4_5q43k")
region = Rect2(15, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mp4x"]
atlas = ExtResource("4_5q43k")
region = Rect2(30, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0e73"]
atlas = ExtResource("4_5q43k")
region = Rect2(45, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe6sa"]
atlas = ExtResource("3_hmyw0")
region = Rect2(63, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xod5w"]
atlas = ExtResource("3_hmyw0")
region = Rect2(105, 24, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e37tr"]
atlas = ExtResource("3_hmyw0")
region = Rect2(105, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhclu"]
atlas = ExtResource("3_hmyw0")
region = Rect2(0, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4p4j"]
atlas = ExtResource("3_hmyw0")
region = Rect2(21, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vktgb"]
atlas = ExtResource("3_hmyw0")
region = Rect2(42, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd1ea"]
atlas = ExtResource("3_hmyw0")
region = Rect2(0, 24, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_go7tw"]
atlas = ExtResource("3_hmyw0")
region = Rect2(21, 24, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j26h5"]
atlas = ExtResource("3_hmyw0")
region = Rect2(42, 24, 21, 24)

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2bs6")
}],
"loop": true,
"name": &"air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0v7v")
}],
"loop": true,
"name": &"door",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_13d3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp0p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mp4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0e73")
}],
"loop": false,
"name": &"game_over",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe6sa")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xod5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e37tr")
}],
"loop": true,
"name": &"nothing",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhclu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4p4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vktgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd1ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_go7tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j26h5")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="2"]
radius = 6.5
height = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_af065"]
radius = 2.54951

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4lmun"]
radius = 6.0
height = 19.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ak88"]
size = Vector2(12, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixjmr"]
size = Vector2(9, 17)

[node name="Player2" type="CharacterBody2D" node_paths=PackedStringArray("resetComp") groups=["Player", "Player_1"]]
light_mask = 2
collision_layer = 2
collision_mask = 17
platform_floor_layers = 1
script = ExtResource("1_opcjl")
resetComp = NodePath("ResetComponent")
currentPlayer = 1

[node name="PointLight2D" parent="." instance=ExtResource("8")]
visible = false
position = Vector2(0, -10)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("1")
animation = &"nothing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -10.5)
shape = SubResource("2")

[node name="GrabZone" parent="." node_paths=PackedStringArray("player") instance=ExtResource("16_dhlbv")]
visible = false
position = Vector2(0, -10)
player = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabZone"]
position = Vector2(1, -3)
shape = SubResource("CircleShape2D_af065")

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("17_n3wkg")]
visible = false
position = Vector2(0, -10)
collision_layer = 2
collision_mask = 8
health = NodePath("../healthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -0.5)
shape = SubResource("CapsuleShape2D_4lmun")

[node name="Hitbox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("16_s05jt")]
visible = false
position = Vector2(0, -10)
collision_mask = 4
health = NodePath("../healthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_5ak88")

[node name="LavaWater_Detector" parent="." instance=ExtResource("18_e6n55")]
visible = false
position = Vector2(0, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LavaWater_Detector"]
position = Vector2(-0.5, -1.5)
shape = SubResource("RectangleShape2D_ixjmr")

[node name="Timer" type="Node" parent="."]

[node name="KnockbackTimer" type="Timer" parent="Timer"]
wait_time = 0.4
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timer"]
wait_time = 0.08

[node name="JumpBufferTimer" type="Timer" parent="Timer"]
wait_time = 0.2

[node name="ManaTimer" type="Timer" parent="Timer"]
wait_time = 4.0
one_shot = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2(-6, -11)
rotation = 1.5708
target_position = Vector2(0, 2)

[node name="RayCastRight" type="RayCast2D" parent="."]
visible = false
position = Vector2(6, -11)
rotation = -1.5708
target_position = Vector2(0, 2)

[node name="Sword" parent="." instance=ExtResource("10")]
position = Vector2(7, -7)
player = 2

[node name="Wand" parent="." instance=ExtResource("9")]
visible = false
position = Vector2(-1, -6)

[node name="healthComponent" parent="." node_paths=PackedStringArray("invisibilityComp", "lavaDetector") instance=ExtResource("18_thren")]
health = 100.0
invisibiltyFrames = 2.0
invisibilityComp = NodePath("../InvisibleFramesComp")
lavaDetector = NodePath("../LavaWater_Detector")

[node name="ResetComponent" parent="." node_paths=PackedStringArray("collisions", "healthComp") instance=ExtResource("23_w7l8q")]
collisions = [NodePath("../CollisionShape2D"), NodePath("../GrabZone/CollisionShape2D"), NodePath("../Hurtbox/CollisionShape2D"), NodePath("../Hitbox/CollisionShape2D"), NodePath("../LavaWater_Detector/CollisionShape2D")]
healthComp = NodePath("../healthComponent")
setStartPosition = false
physics_process = true

[node name="InvisibleFramesComp" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("24_6rijt")]
parent = NodePath("../AnimatedSprite2D")

[node name="JumpComponent" parent="." node_paths=PackedStringArray("body", "waterDetector", "grabZone") instance=ExtResource("14_lgxc1")]
body = NodePath("..")
waterDetector = NodePath("../LavaWater_Detector")
grabZone = NodePath("../GrabZone")

[node name="FloorRotaterComponent" parent="." node_paths=PackedStringArray("body", "sprite") instance=ExtResource("15_aumw4")]
body = NodePath("..")
sprite = NodePath("../AnimatedSprite2D")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer/KnockbackTimer" to="." method="_on_damage_knockback_timeout"]
[connection signal="timeout" from="Timer/JumpBufferTimer" to="." method="_on_JumpBufferTimer_timeout"]
[connection signal="timeout" from="Timer/ManaTimer" to="." method="_on_ManaTimer_timeout"]
